# design-patterns

./: .gitignore  LICENSE  README.md
python-design-patterns/: pyproject.toml
python-design-patterns/creational_patterns/abstract_factory/: abstract_factory.py
python-design-patterns/creational_patterns/builder/: builder.py
python-design-patterns/functional_patterns/composite/: composite.md  composite.py
python-design-patterns/structural_patterns/aggregation/: aggregation_1.py  aggregation_2.py
python-design-patterns/structural_patterns/composite/: composite.py
python-design-patterns/structural_patterns/composition/: composition_1.py  composition_2.py
scala-design-patterns/: build.sbt
scala-design-patterns/src/main/scala/CreationalPatterns/AbstractFactory/: AbstractFactory.md  AbstractFactory.scala
scala-design-patterns/src/main/scala/CreationalPatterns/Builder/: Builder.md  Builder.scala
scala-design-patterns/src/main/scala/FunctionalPatterns/Composite/: Composite.scala
scala-design-patterns/src/main/scala/StructuralPatterns/Aggregation/: Aggregation.md  Aggregation.scala
scala-design-patterns/src/main/scala/StructuralPatterns/Composite/: Composite.md  Composite.scala
scala-design-patterns/src/main/scala/StructuralPatterns/Composition/: Composition.md  Composition.scala
